[package]
name = "rusty-shattered-pixel-dungeon"
version = "0.1.0"
edition = "2024"



[workspace.lints.clippy]

[workspace.lints.rust]

[lints.clippy]

[dependencies]
serde = "1.0.198"
thiserror = "2.0.12"
anyhow = "1.0.82"
rand = "0.9.1"
bevy-inspector-egui = "0.31.0"
radix_fmt = "1.0.0"
bitflags = "2.9.1"
strum = "0.27.1"
strum_macros = "0.27.1"

[dependencies.bevy]
version = "0.16.1"
features = ["jpeg"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
